# SilverVector

./: .gitignore  README.md  pyproject.toml
src/silvervector/: main.py  parser.py
src/silvervector/examples/: README.md  ecommerce.sql  init_ecommerce.py
src/silvervector/examples/orchard-core/: README.md
src/silvervector/examples/orchard-core/orchard-data/: generate_demo_data.py
src/silvervector/templates/: base_dashboard.json
